force-app/main/default/objects/Case/fields/PPE_Product__c.field-meta.xml
<CustomField>
    <fullName>PPE_Product__c</fullName>
    <label>PPE Product</label>
    <type>Text</type>
    <length>100</length>
</CustomField>