force-app/main/default/objects/Case/fields/PPE_Product_Image__c.field-meta.xml
<CustomField>
    <fullName>PPE_Product_Image__c</fullName>
    <label>PPE Product Image</label>
    <type>Url</type>
</CustomField>