force-app/main/default/objects/Case/fields/PPE_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PPE_Quantity__c</fullName>
    <label>PPE Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>