force-app/main/default/objects/Case/fields/PPE_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Size__c</fullName>
    <label>Product Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>XS</fullName><default>false</default><label>XS</label></value>
            <value><fullName>S</fullName><default>false</default><label>S</label></value>
            <value><fullName>M</fullName><default>false</default><label>M</label></value>
            <value><fullName>L</fullName><default>false</default><label>L</label></value>
            <value><fullName>XL</fullName><default>false</default><label>XL</label></value>
            <value><fullName>XXL</fullName><default>false</default><label>XXL</label></value>
            <value><fullName>N/A</fullName><default>true</default><label>N/A</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>