force-app/main/default/objects/Case/fields/Site_affectation__c.field-meta.xml
<CustomField>
    <fullName>Site_affectation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site d&apos;affectation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>